# compel

./: .gitignore  pyproject.toml  requirements.txt
src/compel/: compel.py  embeddings_provider.py  prompt_parser.py
test/: benchmark.py
