[project]
name = "compel"
version = "2.0.4"
authors = [
    { name="Damian Stewart", email="null@damianstewart.com" },
    { name="Roman Himmelreich", email="roman@oylo.io" }
]
description = "A prompting enhancement library for transformers-type text embedding systems."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "diffusers >= 0.11",
    "pyparsing ~= 3.0",
    "torch",
    "transformers ~= 4.25"
]

[project.urls]
"Homepage" = "https://github.com/oylo-io/compel"
"Bug Tracker" = "https://github.com/oylo-io/compel/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

